--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://127.0.0.1:8000
+VITE_API_URL=https://doc-site--spinehomeo-backend--gzz9drgsgfmq.code.run
 MAILCATCHER_HOST=http://localhost:1080
