--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-router": "^1.131.50",
-    "@tanstack/react-router-devtools": "^1.139.12",
+    "@tanstack/react-router-devtools": "^1.140.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -53,6 +53,7 @@
     "@tanstack/router-devtools": "^1.140.0",
     "@tanstack/router-plugin": "^1.140.0",
     "@types/node": "^24.10.1",
+    "csstype": "^3.0.10",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
